:bug: fix: fonts.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,8 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+
     <title>Full-Stack Test</title>
   </head>
   <body>
