:star2: feat: add meta tags.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta property="og:url" content="https://customers-manager.surge.sh/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Customers Manager">
+    <meta property="og:description" content="This is a test for a full stack developer position.">
+    <meta property="og:image" content="hhttps://i.imgur.com/usMuSbW.png">
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Ignicao Digital - Developer Test"
+      content="Developer Test"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
